--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@
     font-size: 40px;
     margin-top: 3rem;
     margin-bottom: 1rem;
+    text-align: center;
 }
 
 .header__paragraph {
@@ -96,6 +97,7 @@
 .title__section {
     font-size: 35px;
     color: var(--dark-grayish-blue);
+    text-align: center;
 }
 
 .description__section {
@@ -121,6 +123,13 @@
     max-width: 100%;
     height: 100%;
     margin-left: -2%;
+}
+
+.computer__image__mobile {
+    display: none;
+    max-height: 572px;
+    max-width: 100%;
+    height: 100%;
 }
 
 .column__description {
@@ -194,12 +203,13 @@
     gap: 25px;
 }
 
-.social img {
-    align-self: center;
+ion-icon {
+    font-size: 30px;
+    color: var(--dark-grayish-blue)
 }
 
-svg:hover {
-    fill: red;
+ion-icon:hover {
+    color: var(--strong-cyan);
 }
 
 /* XL Devices */
@@ -214,6 +224,10 @@ svg:hover {
 
 /* Tablet */
 @media (max-width: 980px) {
+    .header__paragraph {
+        width: 93%;
+    }
+
     .columns__container {
         flex-wrap: wrap;
         justify-content: center;
@@ -222,4 +236,112 @@ svg:hover {
     .column__description {
         align-items: center;
     }
+
+    .buttons {
+        flex-direction: column;
+    }
+
+    .buttons a {
+        padding: 1rem 4.5rem;
+    }
+
+    .computer__image {
+        display: none;
+    }
+
+    .computer__image__mobile {
+        display: block;
+        max-width: 60%;
+    }
+
+    .second__section img {
+        width: 60%;
+    }
+
+    .row__description {
+        flex-direction: column;
+    }
+
+    .row__text {
+        width: 98%;
+    }
+
+    .row__enterprises {
+        flex-direction: column;
+        gap: 50px;
+    }
+
+    .footer__background {
+        height: auto;
+        flex-direction: column;
+    }
+
+    .logo__footer {
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
+
+    .links__footer {
+        flex-direction: column;
+        gap: initial;
+        text-align: center;
+    }
+
+    .footer__background p {
+        margin: 10px 0;
+    }
+
+    .social {
+        gap: 40px;
+        margin: 40px 0;
+    }
+}
+
+/* Mobile */
+@media (max-width: 375px) {
+    .first__section, .second__section, .third__section, .fifth__section {
+        margin-bottom: 10rem;
+    }
+
+    .header__background {
+        height: 90vh;
+    }
+
+    .header__title {
+        font-size: 35px;
+    }
+
+    .title__section {
+        font-size: 30px;
+    }
+
+    .description__section {
+        width: 90%;
+    }
+
+    .computer__image__mobile {
+        width: 85%;
+    }
+
+    .column__description {
+        gap: 40px;
+    }
+
+    .column__text {
+        width: 95%;
+    }
+
+    .column__text h3 {
+        font-size: 25px;
+        text-align: center;
+    }
+
+    .column__text p {
+        text-align: center;
+    }
+
+    .second__section img {
+        width: 85%;
+    }
+
 }
